--- a/templates/editar_pedido.html
+++ b/templates/editar_pedido.html
@@ -74,6 +74,13 @@
             </div>
             <div class="col-md-4">
                 <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Desconto: </label>
+                    <input type="text" class="form-control" name="desconto" placeholder=""
+                        value="{{pedido.desconto}}">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Valor: </label>
                     <input type="text" class="form-control" name="valor" placeholder=""
                             value="{{pedido.valor}}">
