--- a/templates/search_r.html
+++ b/templates/search_r.html
@@ -6,7 +6,7 @@
 <hr>
 <br><br>
 <div id="">
-    <h2>Entregas do dia</h2>
+    <h2>Retiradas do dia</h2>
     <br>
     <form action="{{ url_for('search_r') }}" method="post">
         <div id="search-form">
